--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,17 @@ body, input{
     background-color: #fff;
     overflow: hidden;
 }
+.container:before{
+    content:'';
+    position: absolute;
+    width: 2000px;
+    height: 2000px;
+    border-radius: 50%;
+    background: linear-gradient(-45deg, #536DFE, #677EF9);
+    top: -10%;
+    right: 48%;
+    transform: translateY(-50%);
+}
 .forms-container{
     position: absolute;
     width: 100%;
@@ -21,11 +32,31 @@ body, input{
     top: 0;
     left: 0;
 }
+.signin-signup{
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    display: grid;
+    grid-template-columns: 1fr;
+}
 form{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 0 5rem;
+    overflow: hidden;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+form.sign-in-form{
+    z-index: 2;
+}
+form.sign-up-form{
+    z-index: 1;
+    opacity: 0;
 }
 .title{
     font-size: 2.2rem;
